Ajsutes en painas

--- a/THL/index.htm
+++ b/THL/index.htm
@@ -23,17 +23,24 @@
 
     <script charset="UTF-8" src="js/push/f37a8de88fe04d42db46e49419ca8412_1.js" async=""></script>
     <style>
-
+        #logo {
+            display: none;
+        }
+        
+        .btn-nuevo-color {
+            background-color: #ff00d2 !important;
+        }
+        
+        .sticky-active #logo {
+            display: block;
+        }
     </style>
 </head>
 
 <body class="body" onmousemove="myFunction(event)">
-    <div class="cursor">
-        <!-- <img src="./images/favicon.png" alt=""> -->
-    </div>
     <!-- Inner body -->
     <div class="body-inner">
-        <div id="artibot-1616847742643"></div>
+        <section data-bg-video="./video/videoHom.mp4" class="w-100 section-video"></section>
 
         <!-- Top bar-->
         <div id="topbar" class="topbar-transparent topbar-fullwidth dark d-none d-xl-block d-lg-block">
@@ -66,7 +73,6 @@
                     <!--Logo-->
                     <div id="logo">
                         <a href="index.htm" class="content-logo">
-                            <!-- <img class="img-ligth img-general" src="./images/01.png" alt=""> -->
                         </a>
                     </div>
                     <!--End: Logo-->
@@ -95,7 +101,7 @@
         </header>
 
         <!-- Slider -->
-        <div id="slider" class="inspiro-slider slider-fullscreen dots-creative" data-height-xs="360" data-bg-video="./video/videoHom.mp4">
+        <div id="slider" class="seccion-trasparente inspiro-slider slider-fullscreen dots-creative" data-height-xs="360">
             <!-- Slide 1 -->
             <div class="slide kenburns">
                 <!-- <div class="bg-overlay"></div> -->
@@ -104,14 +110,13 @@
                         <!-- Captions -->
                         <!-- <span data-animate="fadeInUp" data-animate-delay="300" class="strong"><a href="#" class="business"><span class="business">Blockchain 3.0</span></a>
                         </span> -->
-                        <h1 class="m-0" data-animate="fadeInUp" data-animate-delay="600">We are <br>The Hidden <br> London
+                        <!-- <h1 class="m-0" data-animate="fadeInUp" data-animate-delay="600">We are <br>The Hidden <br> London
                             <font color="#0f2123">.</font>
-                        </h1>
+                        </h1> -->
+                        <img class="Logo-home center" src="./images/logo-en-neon.png" alt="">
+                        <h3 class="fuente-banner text-center">A NEW GENERATION OF CULTURE</h3>
                         <span class="texto-banner">A forward-thinking marketing agency using data and innovative strategies to provide influential and effective campaigns.</span>
-                        <h3 class="fuente-banner">A new generation of culture</h3>
-                        <div data-animate="fadeInUp" data-animate-delay="900">
-                            <button type="button" class="btn btn-rounded btn-reveal btn-reveal-left"><span><a href="#Services">Learn More</a></span><i class="fa fa-arrow-right"></i></button>
-                        </div>
+
                         <!-- end: Captions -->
                     </div>
                 </div>
@@ -119,15 +124,15 @@
             <!-- end: Slide 1 -->
         </div>
         <!-- Learn more -->
-        <section class="p-t-120 whi_we_are" data-bg-video="./video/aboutMe.mp4">
+        <section class="seccion-trasparente p-t-50">
             <div class="container">
                 <div class="col-lg-8 m-b-100 center">
                     <div class="heading-text heading-section text-center">
-                        <h2 style="color: #fff;" id="learnmore">Who we are</h2>
-                        <p style="color: #fff;font-size: 1.5rem;font-weight: 500;"> In this new era of digital media, new methods of marketing are needed to evoke responses from consumers. The Hidden London is a UK based marketing, talent and creative production agency with a new gen approach to digital marketing
+                        <h2 style="color: #fff;" id="learnmore" data-animate-delay="600" data-animate="fadeInLeft">Who we are</h2>
+                        <p style="color: #fff;font-size: 1.5rem;font-weight: 500;" data-animate-delay="600" data-animate="fadeInUp"> In this new era of digital media, new methods of marketing are needed to evoke responses from consumers. The Hidden London is a UK based marketing, talent and creative production agency with a new gen approach to digital marketing
                             campaigns.
                         </p>
-                        <p style="color: #fff;font-size: 1.5rem;font-weight: 500;"> We provide clients with the strategies that help to connect brands to culture. By aiding in influencer selection, and providing creative production, we offer a full in-house service. Our aim is to help brands run successful campaigns
+                        <p style="color: #fff;font-size: 1.5rem;font-weight: 500;" data-animate-delay="600" data-animate="fadeInUp"> We provide clients with the strategies that help to connect brands to culture. By aiding in influencer selection, and providing creative production, we offer a full in-house service. Our aim is to help brands run successful campaigns
                             across numerous platforms and to create long lasting partnerships.</p>
                     </div>
                 </div>
@@ -137,34 +142,34 @@
         </section>
         <!-- end: Learn more -->
         <!-- More -->
-        <section class="background-grey p-t-120 pb-0">
+        <section class="seccion-trasparente p-t-50 pb-0">
 
             <div class="container-fluid">
 
                 <div class="col-lg-12 m-b-100 center">
                     <div class="heading-text heading-section text-center">
-                        <h2 id="wiki" style="color: #fff;    font-size: 80px;">What we focus on <br><small><strong>C</strong>reativity, <strong>C</strong>onnection, <strong>C</strong>ulture   </small></h2>
+                        <h2 id="wiki" style="color: #fff;" data-animate-delay="600" data-animate="flipInX">What we focus on <br><small><strong style="color:#ff00d2 ">C</strong>reativity, <strong style="color:#ff00d2 ">C</strong>onnection & <strong style="color:#ff00d2 ">C</strong>ulture   </small></h2>
                         <div class="row">
                             <div class="col-12 col-lg-4">
-                                <h3 style="font-size: 40px;">Creativity</h3>
-                                <p>We stay innovative by keeping creative and forward thinking. Always remaining ‘ahead of the curb’ to influence the latest trends and iconic fashion statements. Curating sets from the ground up, and having the best team
+                                <h3 style="color:#ff00d2;font-size: 40px;" data-animate-delay="600" data-animate="fadeInUp">Creativity</h3>
+                                <p style="color: #fff;" data-animate-delay="600" data-animate="fadeInUp">We stay innovative by keeping creative and forward thinking. Always remaining ‘ahead of the curb’ to influence the latest trends and iconic fashion statements. Curating sets from the ground up, and having the best team
                                     of photographers and videographers on board means that brands have one less thing to worry about, as we have all the necessary tools needed to execute a vision, whether big or small - the possibilities are endless.</p>
                             </div>
                             <div class="col-12 col-lg-4">
-                                <h3 style="font-size: 40px;">Connection</h3>
-                                <p>Focusing on representation and building connections individually and as partnerships is our number one priority as an agency. To create harmonious relationships ensures the best results for successful campaigns and enables
+                                <h3 style="color:#ff00d2;font-size: 40px;" data-animate-delay="600" data-animate="fadeInUp">Connection</h3>
+                                <p style="color: #fff;" data-animate-delay="600" data-animate="fadeInUp">Focusing on representation and building connections individually and as partnerships is our number one priority as an agency. To create harmonious relationships ensures the best results for successful campaigns and enables
                                     longevity investments.
                                 </p>
-                                <p>We have established relationships with a network of pioneering talents within an influential culture. This has given us a competitive advantage to create strategic partnerships. We aim to bridge the gap between brands and
+                                <p style="color: #fff;" data-animate-delay="600" data-animate="fadeInUp">We have established relationships with a network of pioneering talents within an influential culture. This has given us a competitive advantage to create strategic partnerships. We aim to bridge the gap between brands and
                                     the culture, creating new sustainable connections.</p>
                             </div>
                             <div class="col-12 col-lg-4">
-                                <h3 style="font-size: 40px;">Culture</h3>
-                                <p>Having an anthropologist amongst our team ensures a greater understanding in the importance of culture and representation, making sure all cultures feel enriched and not exploited through our marketing and featured campaigns.</p>
-                                <p>We take a holistic approach by combining measurable data with culturally informed human insights to ensure we can communicate better with the target audience. </p>
+                                <h3 style="color:#ff00d2;font-size: 40px;" data-animate-delay="600" data-animate="fadeInUp">Culture</h3>
+                                <p style="color: #fff;" data-animate-delay="600" data-animate="fadeInUp">Having an anthropologist amongst our team ensures a greater understanding in the importance of culture and representation, making sure all cultures feel enriched and not exploited through our marketing and featured campaigns.</p>
+                                <p style="color: #fff;" data-animate-delay="600" data-animate="fadeInUp">We take a holistic approach by combining measurable data with culturally informed human insights to ensure we can communicate better with the target audience. </p>
                             </div>
                             <div class="col-12">
-                                <button type="button" class="btn btn-rounded btn-reveal btn-reveal-left"><span>
+                                <button type="button" class="btn btn-rounded btn-reveal btn-reveal-left btn-nuevo-color" data-animate-delay="600" data-animate="fadeInUp"><span>
                                     <a href="./pages/about-me.html" style="color: #fff;font-size: 1.5rem;">Find out more</a></span><i class="fa fa-arrow-right"></i></button>
                             </div>
                         </div>
@@ -177,14 +182,14 @@
         <!-- end: Our numbers -->
 
         <!-- More -->
-        <section class="background-grey p-b-120">
+        <section class="seccion-trasparente p-b-120">
 
             <div class="container">
 
                 <div class="col-lg-8 m-b-100 center">
                     <div class="heading-text heading-section text-center">
-                        <h2 id="wiki">Who we work with</h2>
-                        <p>We work with a vast array of influences and talents from emerging, to high profile. This includes social media influencers, musicians, actors, entertainers and sportsmen’s. We take pride in creating a diverse, jovial community,
+                        <h2 id="wiki" data-animate-delay="600" data-animate="jackInTheBox">Who we work with</h2>
+                        <p style="color: #fff;" data-animate-delay="600" data-animate="fadeInUp">We work with a vast array of influences and talents from emerging, to high profile. This includes social media influencers, musicians, actors, entertainers and sportsmen’s. We take pride in creating a diverse, jovial community,
                             brining the best opportunities and representation for clients and</p>
                     </div>
                 </div>
@@ -267,6 +272,7 @@
             </div>
         </footer>
         <!-- end: Footer -->
+        <div class="cursor"></div>
 
     </div>
 
