--- a/THL/pages/services.html
+++ b/THL/pages/services.html
@@ -127,7 +127,7 @@
         </header>
         <!-- Container -->
         <!-- Our Ecosystem -->
-        <section id="Services" class="p-t-200 p-b-200 background-grey">
+        <section id="Services" class="p-t-50 p-b-50 background-grey">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-12 col-lg-1"></div>
@@ -135,40 +135,42 @@
                         <div class="row">
                             <div class="col-12 mb-5">
                                 <a href="./campaing-strategy.html" class="mouse_hover" data-imagen="box-instagram">
-                                    <span class="url">/CAMPAING-STRATEGY</span>
+                                    <!-- <span class="url">/CAMPAING-STRATEGY</span> -->
                                     <h2 class="">CAMPAING STRATEGY</h2>
                                 </a>
                             </div>
                             <div class="col-12 mb-5">
                                 <a href="./production_content_creation.html" class="mouse_hover" data-imagen="box-facebook">
-                                    <span class="url">/PRODUCTION_CONTENT_CREATION</span>
+                                    <!-- <span class="url">/PRODUCTION_CONTENT_CREATION</span> -->
                                     <h2 class="">PRODUCTION & CONTENT CREATION</h2>
                                 </a>
                             </div>
                             <div class="col-12 mb-5">
                                 <a href="./digital_data_marketing.html" class="mouse_hover" data-imagen="box-twitter">
-                                    <span class="url">/DIGITAL_DATA_MARKETING</span>
+                                    <!-- <span class="url">/DIGITAL_DATA_MARKETING</span> -->
                                     <h2 class="">DIGITAL DATA & MARKETING</h2>
                                 </a>
                             </div>
                             <div class="col-12 mb-5">
                                 <a href="./brand_talent_relations.html" class="mouse_hover" data-imagen="box-youtube">
-                                    <span class="url">/BRAND_TALENT_RELATIONS</span>
+                                    <!-- <span class="url">/BRAND_TALENT_RELATIONS</span> -->
                                     <h2 class="">BRAND & TALENT RELATIONS</h2>
                                 </a>
                             </div>
                             <div class="col-12 mb-5">
                                 <a href="./legal_compliance.html" class="mouse_hover" data-imagen="box-soudcould">
-                                    <span class="url">/LEGAL_COMPLIANCE</span>
+                                    <!-- <span class="url">/LEGAL_COMPLIANCE</span> -->
                                     <h2 class="">LEGAL & COMPLIANCE</h2>
                                 </a>
                             </div>
                         </div>
                     </div>
                     <div class="col-12 col-lg-5">
-                        <a href="" id="url">
-                            <img class="animate__animated animate__bounceInUp img-fluid w-100" src="" id="imeg" alt="">
-                        </a>
+                        <div class="d-flex align-items-center h-100">
+                            <a href="" id="url">
+                                <img class="animate__animated animate__bounceInUp img-fluid w-100" src="" id="imeg" alt="">
+                            </a>
+                        </div>
                     </div>
 
                     <div class="col-12 col-lg-1"></div>
