--- a/THL/index.htm
+++ b/THL/index.htm
@@ -34,6 +34,12 @@
         .sticky-active #logo {
             display: block;
         }
+        
+        @media (max-width: 780px) {
+            .Logo-home {
+                width: 100%;
+            }
+        }
     </style>
 </head>
 
