--- a/THL/pages/about-me.html
+++ b/THL/pages/about-me.html
@@ -168,7 +168,7 @@
                         <!-- <span data-animate="fadeInUp" data-animate-delay="300" class="strong"><a href="#" class="business"><span class="business">Blockchain 3.0</span></a>
                         </span> -->
 
-                        <h1 data-animate="fadeInUp" data-animate-delay="600">About me
+                        <h1 data-animate="fadeInUp" data-animate-delay="600">about us
                             <font color="#0f2123">.</font>
                         </h1>
                     </div>
