Implementación de funcionalidad form

--- a/THL/index.htm
+++ b/THL/index.htm
@@ -163,21 +163,21 @@
                         <div class="row">
                             <div class="col-12 col-lg-4">
                                 <h3 style="color:#ff00d2;font-size: 40px;" data-animate-delay="600" data-animate="fadeInUp">Creativity</h3>
-                                <p style="color: #fff;" data-animate-delay="600" data-animate="fadeInUp">We stay innovative by keeping creative and forward thinking. Always remaining ‘ahead of the curb’ to influence the latest trends and iconic fashion statements. Curating sets from the ground up, and having the best team
+                                <p style="color: #fff;font-size: 1.5rem;font-weight: 500;" data-animate-delay="600" data-animate="fadeInUp">We stay innovative by keeping creative and forward thinking. Always remaining ‘ahead of the curb’ to influence the latest trends and iconic fashion statements. Curating sets from the ground up, and having the best team
                                     of photographers and videographers on board means that brands have one less thing to worry about, as we have all the necessary tools needed to execute a vision, whether big or small - the possibilities are endless.</p>
                             </div>
                             <div class="col-12 col-lg-4">
                                 <h3 style="color:#ff00d2;font-size: 40px;" data-animate-delay="600" data-animate="fadeInUp">Connection</h3>
-                                <p style="color: #fff;" data-animate-delay="600" data-animate="fadeInUp">Focusing on representation and building connections individually and as partnerships is our number one priority as an agency. To create harmonious relationships ensures the best results for successful campaigns and enables
+                                <p style="color: #fff;font-size: 1.5rem;font-weight: 500;" data-animate-delay="600" data-animate="fadeInUp">Focusing on representation and building connections individually and as partnerships is our number one priority as an agency. To create harmonious relationships ensures the best results for successful campaigns and enables
                                     longevity investments.
                                 </p>
-                                <p style="color: #fff;" data-animate-delay="600" data-animate="fadeInUp">We have established relationships with a network of pioneering talents within an influential culture. This has given us a competitive advantage to create strategic partnerships. We aim to bridge the gap between brands and
+                                <p style="color: #fff;font-size: 1.5rem;font-weight: 500;" data-animate-delay="600" data-animate="fadeInUp">We have established relationships with a network of pioneering talents within an influential culture. This has given us a competitive advantage to create strategic partnerships. We aim to bridge the gap between brands and
                                     the culture, creating new sustainable connections.</p>
                             </div>
                             <div class="col-12 col-lg-4">
                                 <h3 style="color:#ff00d2;font-size: 40px;" data-animate-delay="600" data-animate="fadeInUp">Culture</h3>
-                                <p style="color: #fff;" data-animate-delay="600" data-animate="fadeInUp">Having an anthropologist amongst our team ensures a greater understanding in the importance of culture and representation, making sure all cultures feel enriched and not exploited through our marketing and featured campaigns.</p>
-                                <p style="color: #fff;" data-animate-delay="600" data-animate="fadeInUp">We take a holistic approach by combining measurable data with culturally informed human insights to ensure we can communicate better with the target audience. </p>
+                                <p style="color: #fff;font-size: 1.5rem;font-weight: 500;" data-animate-delay="600" data-animate="fadeInUp">Having an anthropologist amongst our team ensures a greater understanding in the importance of culture and representation, making sure all cultures feel enriched and not exploited through our marketing and featured campaigns.</p>
+                                <p style="color: #fff;font-size: 1.5rem;font-weight: 500;" data-animate-delay="600" data-animate="fadeInUp">We take a holistic approach by combining measurable data with culturally informed human insights to ensure we can communicate better with the target audience. </p>
                             </div>
                             <div class="col-12">
                                 <button type="button" class="btn btn-rounded btn-reveal btn-reveal-left btn-nuevo-color" data-animate-delay="600" data-animate="fadeInUp"><span>
@@ -199,8 +199,8 @@
 
                 <div class="col-lg-8 m-b-100 center">
                     <div class="heading-text heading-section text-center">
-                        <h2 id="wiki" data-animate-delay="600" data-animate="jackInTheBox">Who we work with</h2>
-                        <p style="color: #fff;" data-animate-delay="600" data-animate="fadeInUp">We work with a vast array of influences and talents from emerging, to high profile. This includes social media influencers, musicians, actors, entertainers and sportsmen’s. We take pride in creating a diverse, jovial community,
+                        <h2 style="color: #fff;" id="wiki" data-animate-delay="600" data-animate="jackInTheBox">Who we work with</h2>
+                        <p style="color: #fff;font-size: 1.5rem;font-weight: 500;" data-animate-delay="600" data-animate="fadeInUp">We work with a vast array of influences and talents from emerging, to high profile. This includes social media influencers, musicians, actors, entertainers and sportsmen’s. We take pride in creating a diverse, jovial community,
                             brining the best opportunities and representation for clients and</p>
                     </div>
                 </div>
