--- a/THL/pages/talent.html
+++ b/THL/pages/talent.html
@@ -177,6 +177,8 @@
                     <div class="col-lg-12">
 
                         <form class="widget-contact-form" novalidate="" action="include/contact-form.php" role="form" method="post">
+
+                            <input type="hidden" name="type-form" class="type-form" value="talent">
                             <div class="row">
                                 <div class="form-group col-md-4">
                                     <label for="name" style="color: #fff;">Name</label>
@@ -241,6 +243,7 @@
     <script src="../js/plugins.js"></script>
 
     <!--Template functions-->
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
     <script src="../js/functions.js"></script>
 
     <!-- Start of ubixnetwork Zendesk Widget script -->
