--- a/THL/index.htm
+++ b/THL/index.htm
@@ -22,6 +22,8 @@
     <link rel="canonical" href="index.htm">
 
     <script charset="UTF-8" src="js/push/f37a8de88fe04d42db46e49419ca8412_1.js" async=""></script>
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <style>
         #logo {
             display: none;
@@ -45,6 +47,9 @@
 
 <body class="body" onmousemove="myFunction(event)">
     <!-- Inner body -->
+    <script>
+        AOS.init();
+    </script>
     <div class="body-inner">
         <section data-bg-video="./video/videoHom.mp4" class="w-100 section-video"></section>
 
@@ -78,7 +83,8 @@
         <!-- end: Top bar -->
 
         <!-- Header -->
-        <header id="header" data-transparent="true" class="dark submenu-light">
+        <header id="header" data-transparent="true" class="submenu-light">
+
             <div class="header-inner">
                 <div class="container">
                     <!--Logo-->
@@ -159,7 +165,7 @@
 
                 <div class="col-lg-12 m-b-100 center">
                     <div class="heading-text heading-section text-center">
-                        <h2 id="wiki" style="color: #fff;" data-animate-delay="600" data-animate="flipInX">What we focus on <br><small><strong style="color:#ff00d2 ">C</strong>reativity, <strong style="color:#ff00d2 ">C</strong>onnection & <strong style="color:#ff00d2 ">C</strong>ulture   </small></h2>
+                        <h2 id="wiki" style="color: #fff;" data-animate-delay="600" data-animate="flipInX">What we focus on <br><b><small style=" font-weight: bold"><strong style="color:#ff00d2;font-weight: bold">C</strong>reativity, <strong style="color:#ff00d2;font-weight: bold ">C</strong>onnection & <strong style="color:#ff00d2;font-weight: bold ">C</strong>ulture   </small></b></h2>
                         <div class="row">
                             <div class="col-12 col-lg-4">
                                 <h3 style="color:#ff00d2;font-size: 40px;" data-animate-delay="600" data-animate="fadeInUp">Creativity</h3>
@@ -199,9 +205,7 @@
 
                 <div class="col-lg-8 m-b-100 center">
                     <div class="heading-text heading-section text-center">
-                        <h2 style="color: #fff;" id="wiki" data-animate-delay="600" data-animate="jackInTheBox">Who we work with</h2>
-                        <p style="color: #fff;font-size: 1.5rem;font-weight: 500;" data-animate-delay="600" data-animate="fadeInUp">We work with a vast array of influences and talents from emerging, to high profile. This includes social media influencers, musicians, actors, entertainers and sportsmen’s. We take pride in creating a diverse, jovial community,
-                            brining the best opportunities and representation for clients and</p>
+                        <h2 id="text-center wiki" style="color: #fff;    text-align: center;" data-animate-delay="600" data-animate="flipInX">Services </h2>
                     </div>
                 </div>
             </div>
@@ -216,9 +220,9 @@
                         <a class="link-item" href="./pages/campaing-strategy.html"></a>
                         <div class="cotent-img mt-5 mb-5">
 
-                            <img src="./images/redes/actors.jpg" alt="Actores">
+                            <img src="./images/Nuevas/campaign_straregy.jpg" alt="Actores">
                         </div>
-                        <span>CAMPAING STRATEGY</span>
+                        <span>CAMPAIGN STRATEGY</span>
                     </div>
                     <!-- end: Team item-->
 
@@ -226,7 +230,7 @@
                     <div class="team-item">
                         <a class="link-item" href="./pages/production_content_creation.html"></a>
                         <div class="cotent-img mt-5 mb-5">
-                            <img src="./images/redes/reporters.jpg" alt="Musicos">
+                            <img src="./images/Nuevas/production_content.jpg" alt="Musicos">
                         </div>
                         <span>PRODUCTION & <br>CONTENT CREATION</span>
                     </div>
@@ -237,7 +241,7 @@
                         <a class="link-item" href="./pages/digital_data_marketing.html"></a>
                         <div class="cotent-img mt-5 mb-5">
 
-                            <img src="./images/redes/youtubers.jpg" alt="Youtubers">
+                            <img src="./images/Nuevas/digital_marketing.jpg" alt="Youtubers">
                         </div>
                         <span>DIGITAL DATA & <br> MARKETINGs</span>
                     </div>
@@ -248,7 +252,7 @@
                     <div class="team-item">
                         <a class="link-item" href="./pages/brand_talent_relations.html"></a>
                         <div class="cotent-img mt-5 mb-5">
-                            <img src="images/redes/reporteros.jpg" alt="Reporteros">
+                            <img src="images/Nuevas/brand_talent.jpg" alt="Reporteros">
                         </div>
                         <span>BRAND & <br> TALENT RELATIONS</span>
                     </div>
@@ -258,7 +262,7 @@
                     <div class="team-item">
                         <a class="link-item" href="./pages/legal_compliance.html"></a>
                         <div class="cotent-img mt-5 mb-5">
-                            <img src="images/redes/escritor.jpg" alt="Escritores">
+                            <img src="images/fondos/soudcould-banner.jpg" alt="Escritores">
                         </div>
                         <span>LEGAL & <br>COMPLIANCE</span>
                     </div>
