--- a/THL/pages/brand_talent_relations.html
+++ b/THL/pages/brand_talent_relations.html
@@ -86,7 +86,7 @@
         }
         
         body {
-            background-image: url('../images/fondos/youtube-banner.jpg');
+            background-image: url('../images/Nuevas/brand_talent.jpg');
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
@@ -157,7 +157,7 @@
                                     <li><a href="./services.html" class="dropdown">Services</a>
                                     </li>
                                     <li><a href="../pages/contacto.html">Contact</a></li>
-                                    <li><a href="../pages/about-me.html">About Us</a></li>
+                                    <li><a href="../pages/about-me.html">About us</a></li>
                                 </ul>
                             </nav>
                         </div>
@@ -176,7 +176,7 @@
                         <!-- <span data-animate="fadeInUp" data-animate-delay="300" class="strong"><a href="#" class="business"><span class="business">Blockchain 3.0</span></a>
                         </span> -->
 
-                        <h1 data-animate="fadeInUp" data-animate-delay="600">Brand & Talent Relations
+                        <h1 data-animate="fadeInUp" data-animate-delay="600">Brand & talent relations
                             <font color="#0f2123">.</font>
                         </h1>
                     </div>
@@ -192,12 +192,14 @@
         <section id="section" class="seccion-trasparente">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-6 col-12">
+                    <!-- <div class="col-lg-6 col-12">
                         <img src="../images/fondos/youtube-destacada.jpg" alt="" class="img-fluid">
+                    </div> -->
+                    <div class="col-12 col-lg-2"></div>
+                    <div class="col-lg-8 col-12">
+                        <p><span class="lead" style="color:#fff; font-weight: bold;font-size: 1.5rem;">Focusing on representation and building connections individually and as partnerships is our number one priority as an agency. To create harmonious relationships ensures the best results for successful campaigns and enables longevity investments. Working on product gifting, fashion collaborations (brands to talent and brands to brands) helps to reinforce these relationships and keep the connections strong.</span></p>
                     </div>
-                    <div class="col-lg-6 col-12">
-                        <p><span class="lead" style="color:#fff">Focusing on representation and building connections individually and as partnerships is our number one priority as an agency. To create harmonious relationships ensures the best results for successful campaigns and enables longevity investments. Working on product gifting, fashion collaborations (brands to talent and brands to brands) helps to reinforce these relationships and keep the connections strong.</span></p>
-                    </div>
+                    <div class="col-12 col-lg-2"></div>
                 </div>
             </div>
 
