--- a/THL/pages/contacto.html
+++ b/THL/pages/contacto.html
@@ -100,7 +100,7 @@
                 <div class="container">
                     <!--Logo-->
                     <div id="logo">
-                        <a href="../index.htm" class="content-logo">
+                        <a href="../index.htm" >
                             <!-- <img class="img-ligth img-general" src="../images/01.png" alt=""> -->
                         </a>
                     </div>
@@ -119,7 +119,7 @@
                                     <li><a href="../index.htm">Home</a></li>
                                     <li><a href="./services.html" class="dropdown">Services</a></li>
                                     <li><a href="../pages/contacto.html">Contact</a></li>
-                                    <li><a href="../pages/about-me.html">About Us</a></li>
+                                    <li><a href="../pages/about-me.html">About us</a></li>
                                 </ul>
                             </nav>
                         </div>
@@ -137,7 +137,7 @@
                         <!-- <span data-animate="fadeInUp" data-animate-delay="300" class="strong"><a href="#" class="business"><span class="business">Blockchain 3.0</span></a>
                         </span> -->
 
-                        <h1 data-animate="fadeInUp" data-animate-delay="600">Contact Us
+                        <h1 data-animate="fadeInUp" data-animate-delay="600">Contact us
                             <font color="#0f2123">.</font>
                         </h1>
                     </div>
@@ -153,6 +153,7 @@
         <section id="constact" class=" bg-transparent p-t-150 p-b-150">
             <div class="container">
                 <div class="row">
+
                     <div class="col-12 col-lg-4 text-center" data-animate="fadeInUp" data-animate-delay="600">
                         <!-- <h5 style="color: #fff">Brand</h5> -->
                         <a href="./brand.html" class="btn-thl">Brand</a>
