--- a/THL/pages/services.html
+++ b/THL/pages/services.html
@@ -132,7 +132,7 @@
         </header>
         <!-- Container -->
         <!-- Our Ecosystem -->
-        <section id="Services" class="p-t-50 p-b-50 background-grey">
+        <section id="Services" class="p-t-50 p-b-50 background-grey scroll-behavior: smooth;" >
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-12 col-lg-1"></div>
@@ -169,14 +169,15 @@
                                 </a>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-12 col-lg-5">
-                        <div class="d-flex align-items-center h-100">
+                    </div>                    
+					<div class="col-12 col-lg-5">
+                        <div class="d-flex align-self-center h-100 my-fixed-item">
                             <a href="" id="url">
                                 <img class="animate__animated animate__bounceInUp img-fluid w-100" src="" id="imeg" alt="">
                             </a>
                         </div>
                     </div>
+
 
                     <div class="col-12 col-lg-1"></div>
                 </div>
