--- a/THL/pages/brand.html
+++ b/THL/pages/brand.html
@@ -142,7 +142,7 @@
                                     <li><a href="../index.htm">Home</a></li>
                                     <li><a href="./services.html" class="dropdown">Services</a></li>
                                     <li><a href="../pages/contacto.html">Contact</a></li>
-                                    <li><a href="../pages/about-me.html">About Us</a></li>
+                                    <li><a href="../pages/about-me.html">About us</a></li>
                                 </ul>
                             </nav>
                         </div>
@@ -181,7 +181,7 @@
                             <div class="col-lg-12">
                                 <div class="heading-text heading-section">
                                     <h2 id="contact" style="color: #fff;">Brand</h2>
-                                    <p class="lead" style="color: #fff;">Have questions or concerns? Than please reach out to us by email or through the contact form on the right.</p>
+                                    <p class="lead" style="color: #fff;">Have any questions or queries? Then please reach out to us by email or through the contact form on the right.</p>
                                 </div>
                             </div>
                         </div>
