--- a/THL/pages/campaing-strategy.html
+++ b/THL/pages/campaing-strategy.html
@@ -89,7 +89,7 @@
         }
         
         body {
-            background-image: url('../images/fondos/instagram-banner.jpg');
+            background-image: url('../images/Nuevas/campaign_straregy.jpg');
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
@@ -161,7 +161,7 @@
 
                                     </li>
                                     <li><a href="../pages/contacto.html">Contact</a></li>
-                                    <li><a href="../pages/about-me.html">About Us</a></li>
+                                    <li><a href="../pages/about-me.html">About us</a></li>
                                 </ul>
                             </nav>
                         </div>
@@ -180,7 +180,7 @@
                         <!-- <span data-animate="fadeInUp" data-animate-delay="300" class="strong"><a href="#" class="business"><span class="business">Blockchain 3.0</span></a>
                         </span> -->
 
-                        <h1 data-animate="fadeInUp" data-animate-delay="600">Campaing Strategy
+                        <h1 data-animate="fadeInUp" data-animate-delay="600">Campaign strategy
                             <font color="#0f2123">.</font>
                         </h1>
                     </div>
@@ -201,15 +201,17 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-lg-6 col-12">
+                    <!-- <div class="col-lg-6 col-12">
                         <img src="../images/fondos/intagram-destacada.jpg" alt="" class="img-fluid">
-                    </div>
-                    <div class="col-lg-6 col-12">
-                        <p><span class="lead" style="color:#fff">
+                    </div> -->
+                    <div class="col-12 col-lg-2"></div>
+                    <div class="col-lg-8 col-12">
+                        <p data-animate="fadeInUp" data-animate-delay="600"><span class="lead" style="color:#fff; font-weight: bold;font-size: 1.5rem;">
                             We undertake extensive research that enables us to create a tailor made strategy that is unique and specific to brands. Carefully choosing the most fitting representation.</span>
                         </p>
-                        <p><span class="lead" style="color:#fff">From our extensive roster of influencers and talent, then combining this with our vast access to creative production brings forth innovative ideas including; curating immersive experiences, product placements, event hosting, digital content creation plus much more.</span></p>
+                        <p data-animate="fadeInUp" data-animate-delay="600"><span class="lead" style="color:#fff; font-weight: bold;font-size: 1.5rem;">From our extensive roster of influencers and talent, then combining this with our vast access to creative production brings forth innovative ideas including; curating immersive experiences, product placements, event hosting, digital content creation plus much more.</span></p>
                     </div>
+                    <div class="col-12 col-lg-2"></div>
                 </div>
             </div>
 
