--- a/THL/pages/general_equires.html
+++ b/THL/pages/general_equires.html
@@ -142,7 +142,7 @@
                                     <li><a href="../index.htm">Home</a></li>
                                     <li><a href="./services.html" class="dropdown">Services</a></li>
                                     <li><a href="../pages/contacto.html">Contact</a></li>
-                                    <li><a href="../pages/about-me.html">About Us</a></li>
+                                    <li><a href="../pages/about-me.html">About us</a></li>
                                 </ul>
                             </nav>
                         </div>
@@ -180,11 +180,11 @@
                         <div class="row">
                             <div class="col-lg-12">
                                 <div class="heading-text heading-section">
-                                    <h2 id="contact" style="color: #fff;">General Enquires</h2>
-                                    <p class="lead" style="color: #fff;">Have any questions or concerns? Then please reach out to us by email or through the contact form on the right.</p>
+                                    <h2 id="contact" style="color: #fff;">General enquires</h2>
+                                    <p class="lead" style="color: #fff;">Have any questions or queries? Then please reach out to us by email or through the contact form on the right.</p>
                                 </div>
                             </div>
-                            <div class="col-lg-6 m-b-30">
+                            <div class="col-lg-6 m-b-30" style="color: #fff;">
                                 <address style="color: #fff;">
                                     <strongstyle="color: #fff;">Headquarters:</strong><br>
                                     Docklands, London<br>
@@ -200,6 +200,11 @@
                                         <li class="social-facebook"><a href="https://www.facebook.com/The-Hidden-London-106528494879638/?ref=page_internal" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
                                         <li class="social-twitter"><a href="https://twitter.com/TheHiddenLondon" target="_blank"><i class="fab fa-twitter"></i></a></li>
                                         <li class="social-instagram"><a href="https://www.instagram.com/thehiddenlondon/" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                                        <li class="social-tiktok">
+                                            <a href="https://www.tiktok.com/@thehiddenlondon?lang=en">
+                                                <svg style="width: 15px;" aria-hidden="true" focusable="false" data-prefix="fab" data-icon="tiktok" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="svg-inline--fa fa-tiktok fa-w-14"><path fill="currentColor" d="M448,209.91a210.06,210.06,0,0,1-122.77-39.25V349.38A162.55,162.55,0,1,1,185,188.31V278.2a74.62,74.62,0,1,0,52.23,71.18V0l88,0a121.18,121.18,0,0,0,1.86,22.17h0A122.18,122.18,0,0,0,381,102.39a121.43,121.43,0,0,0,67,20.14Z" class=""></path></svg>
+                                            </a>
+                                        </li>
                                         <!-- <li class="social-google"><a href="#"><i style="color:#314145" class="fab fa-google-plus-g"></i></a></li>
                                         <li class="social-youtube"><a href="#"><i style="color:#314145" class="fab fa-youtube"></i></a></li>
                                         <li class="social-soundcloud"><a href="#"><i style="color:#314145" class="fab fa-soundcloud"></i></a></li> -->
