--- a/THL/pages/legal_compliance.html
+++ b/THL/pages/legal_compliance.html
@@ -161,7 +161,7 @@
                                     <li><a href="./services.html" class="dropdown">Services</a>
                                     </li>
                                     <li><a href="../pages/contacto.html">Contact</a></li>
-                                    <li><a href="../pages/about-me.html">About Us</a></li>
+                                    <li><a href="../pages/about-me.html">About us</a></li>
                                 </ul>
                             </nav>
                         </div>
@@ -180,7 +180,7 @@
                         <!-- <span data-animate="fadeInUp" data-animate-delay="300" class="strong"><a href="#" class="business"><span class="business">Blockchain 3.0</span></a>
                         </span> -->
 
-                        <h1 data-animate="fadeInUp" data-animate-delay="600">Legal & Compliance
+                        <h1 data-animate="fadeInUp" data-animate-delay="600">Legal & compliance
                             <font color="#0f2123">.</font>
                         </h1>
                     </div>
@@ -201,12 +201,14 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-lg-6 col-12">
+                    <!-- <div class="col-lg-6 col-12">
                         <img src="../images/fondos/soudcould-destacada.jpg" alt="" class="img-fluid">
+                    </div> -->
+                    <div class="col-12 col-lg-2"></div>
+                    <div class="col-lg-8 col-12">
+                        <p><span class="lead" style="color:#fff; font-weight: bold;font-size: 1.5rem;">Our legal team produces the most safe and secure contracts, protecting brands and talent involved in campaigns or collaborations, making sure ethics and finances are all treated fairly with care and delicacy.</span></p>
                     </div>
-                    <div class="col-lg-6 col-12">
-                        <p><span class="lead" style="color:#fff">Our legal team produces the most safe and secure contracts, protecting brands and talent involved in campaigns or collaborations, making sure ethics and finances are all treated fairly with care and delicacy.</span></p>
-                    </div>
+                    <div class="col-12 col-lg-2"></div>
                 </div>
             </div>
 
