--- a/THL/pages/production_content_creation.html
+++ b/THL/pages/production_content_creation.html
@@ -90,7 +90,7 @@
         }
         
         body {
-            background-image: url('../images/fondos/facebook-banner.jpg');
+            background-image: url('../images/Nuevas/production_content.jpg');
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
@@ -162,7 +162,7 @@
 
                                     </li>
                                     <li><a href="../pages/contacto.html">Contact</a></li>
-                                    <li><a href="../pages/about-me.html">About Us</a></li>
+                                    <li><a href="../pages/about-me.html">About us</a></li>
                                 </ul>
                             </nav>
                         </div>
@@ -181,7 +181,7 @@
                         <!-- <span data-animate="fadeInUp" data-animate-delay="300" class="strong"><a href="#" class="business"><span class="business">Blockchain 3.0</span></a>
                         </span> -->
 
-                        <h1 data-animate="fadeInUp" data-animate-delay="600">Production & Content Creation
+                        <h1 data-animate="fadeInUp" data-animate-delay="600">Production & content creation
                             <font color="#0f2123">.</font>
                         </h1>
                     </div>
@@ -206,7 +206,7 @@
                         <img src="../images/fondos/facebook-destacada.jpg" alt="" class="img-fluid">
                     </div>
                     <div class="col-lg-6 col-12">
-                        <p><span class="lead" style="color:#fff">We stay innovative by keeping creative and forward thinking. Always remaining ‘ahead of the curb’ to influence the latest trends and iconic fashion statements. Curating sets from the ground up, and having the best team of content/ creative directors, graphic designers, animators, photographers, videographers, editors and stylists on board means that brands have one less thing to worry about, as we have all the necessary tools needed to execute a vision, whether big or small - the possibilities are endless.</span></p>
+                        <p><span class="lead" style="color:#fff; font-weight: bold;">We stay innovative by keeping creative and forward thinking. Always remaining ‘ahead of the curb’ to influence the latest trends and iconic fashion statements. Curating sets from the ground up, and having the best team of content/ creative directors, graphic designers, animators, photographers, videographers, editors and stylists on board means that brands have one less thing to worry about, as we have all the necessary tools needed to execute a vision, whether big or small - the possibilities are endless.</span></p>
                     </div>
                 </div>
             </div>
