--- a/THL/pages/talent.html
+++ b/THL/pages/talent.html
@@ -130,7 +130,7 @@
                                     <li><a href="../index.htm">Home</a></li>
                                     <li><a href="./services.html" class="dropdown">Services</a></li>
                                     <li><a href="../pages/contacto.html">Contact</a></li>
-                                    <li><a href="../pages/about-me.html">About Us</a></li>
+                                    <li><a href="../pages/about-me.html">About us</a></li>
                                 </ul>
                             </nav>
                         </div>
@@ -208,7 +208,7 @@
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label for="message" style="color: #fff;">Social Platform Handles (Instagram, YouTube, Twitter, TikTok)</label>
+                                <label for="message" style="color: #fff;">Social platform handles (Instagram, YouTube, Twitter, TikTok)</label>
                                 <textarea type="text" required="" name="widget-contact-form-message" rows="8" class="form-control required" placeholder="Social Platform Handles (Instagram, YouTube, Twitter, TikTok)"></textarea>
                             </div>
                             <div class="form-group">
